refactor: simplificar uso de streams e ajustes na implementação de serviços
- Substituição de `collect(toList())` por `toList()` para melhor performance e paralelismo.
- Ajuste na inicialização e injeção de dependências em `UserServiceImpl` para evitar chamadas de métodos diretamente via `this`.
- Correção na validação de objetos nulos para evitar NullPointerException
- Refatoração do nome de parâmetro genérico em `CrudService` para atender as convenções de nomenclatura.